refactor: improved docker-composes by creating a swarm configuration on dev environment and adding some tweaks on several settings